Added meta "dhruvik neharia"

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- SEO
     --------------------------------------->
     <meta name="Description" content="Portfolio of Dhruvik Neharia. I'm a student and developer based in Udaipur, Rajasthan.">
-    <meta name="Keywords" content="Dhruvik, Neharia, Dhruvik Neharia, dhruvikn, dhruvikneharia, dhruvik, neharia, dhruvik neharia udaipur, DhruvikN, portfolio, Portfolio, student, Student, website, Website, web-develop, web-development, front-end, HTML, CSS, Udaipur, Rajasthan, Techno India NJR, Engineer, Technology, website, github, apps, software, front, end, javascript, jquery, simplegrid, animations, scroll, git, github, bitbucket, Git, GitHub, india, bachelor of technology, b.tech">
+    <meta name="Keywords" content="Dhruvik, Neharia, Dhruvik Neharia, dhruvik neharia, dhruvikn, dhruvikneharia, dhruvik, neharia, dhruvik neharia udaipur, DhruvikN, portfolio, Portfolio, student, Student, website, Website, web-develop, web-development, front-end, HTML, CSS, Udaipur, Rajasthan, Techno India NJR, Engineer, Technology, website, github, apps, software, front, end, javascript, jquery, simplegrid, animations, scroll, git, github, bitbucket, Git, GitHub, india, bachelor of technology, b.tech">
     <meta name="author" content="Dhruvik Neharia">
     <script type="application/ld+json">
         {
