--- a/hackathons.dhruvikneharia.in/index.html
+++ b/hackathons.dhruvikneharia.in/index.html
@@ -46,6 +46,47 @@
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <ul class="timeline">
+            <li>
+                <div class="timeline-badge">
+                    <i class="fa fa-check"></i>
+                </div>
+                <div class="timeline-panel">
+                    <div class="timeline-heading">
+                        <h4 class="timeline-title">
+                            Mussum ipsum cacilds
+                        </h4>
+                        <p>
+                            <small class="text-muted">
+                                <i class="fa fa-calendar"></i>
+                                
+                            </small>
+                        </p>
+                    </div>
+                    <div class="timeline-body">
+                        <p>
+                            Ad te voluptatibus nam de a exercitation.
+                        </p>
+                    </div>
+                </div>
+            </li>
+            <li class="timeline-inverted">
+                <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+                <div class="timeline-panel">
+                    <div class="timeline-heading">
+                        <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                    </div>
+                    <div class="timeline-body">
+                        <p>
+                            Legam cernantur sed aliqua elit, voluptate sint illum fabulas culpa.
+                        </p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
