--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     github.com/dhruvikn
 
     Tailored in HTML (with emmet), SCSS and jQuery.
-
 -->
 
 
@@ -18,8 +17,6 @@
 <html lang="en">
 
 <head>
-    <!-- Basic Needs
-    -->
     <title>Dhruvik Neharia - Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1, user-scalable=no">
@@ -59,7 +56,9 @@
 
     <!-- Font Awesome
     -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+        crossorigin="anonymous">
 
     <!-- jQuery
     -->
@@ -106,7 +105,7 @@
         </div>
     </div> -->
 
-    <script>
+    <!-- <script>
         $(document).ready(function () {
             $(".chatbot").click(function () {
                 $(".chatbot-screen").show(500);
@@ -116,7 +115,7 @@
                 $(".chatbot-screen").hide(500);
             });
         });
-    </script>
+    </script> -->
 
     <span id="top"></span>
     <!-- Landing Screen
@@ -129,7 +128,7 @@
                         <h1 class="col-12 center">Dhruvik Neharia</h1>
                     </span>
                     <div class="row">
-                        <h3 class="col-12 center">Front-End Web Developer</h3>
+                        <h3 class="col-12 center">​Front-end Developer and UI/UX Designer</h3>
                     </div>
                 </div>
             </div>
@@ -139,7 +138,7 @@
         </div>
 
         <!-- Profile Section
-   -->
+        -->
         <span id="profile"></span>
         <div class="container section">
             <div class="row">
@@ -150,14 +149,13 @@
                     </span>
                     <div class="col-9" data-aos="fade-right">
                         <p>
-                            I'm a front-end web developer &amp; designer based in
-                            <a href="https://goo.gl/maps/VZj8Fbt3etS2"
-                                target="_blank" class="link-r">Udaipur, Rajasthan</a>. My work is focused on developing clean, sleek, creative and responsive
-                            web interfaces.
+                            I'm a developer &amp; designer based in
+                            <a href="https://goo.gl/maps/VZj8Fbt3etS2" target="_blank" class="link-r">Udaipur</a>. My
+                            work is focused on creating clean, creative and responsive interfaces, generally for the
+                            Web.
                         </p>
                         <p>
-                            I'm currently working as an intern at
-                            <a href="http://creatick.in" target="_blank" class="link-r">Creatick</a> but am also open to freelance projects.
+                            I like coding my own designs. I'm learning Full Stack Development right now.
                         </p>
                     </div>
                     <span class="col-3">
@@ -168,7 +166,7 @@
         </div>
 
         <!-- Skills Section
-   -->
+        -->
         <span id="skills"></span>
         <div class="container section sec-skills">
             <div class="row">
@@ -181,9 +179,9 @@
                         <p>
                             My skills are my identity. I always try to keep them as sharp as possible.
                             <br>
-                            <br> You can know about them by looking at my
-                            <a href="https://drive.google.com/open?id=0B1OJmxgZ556MNi1rWXhSRWZERkE"
-                                target="_blank" class="link-r">Résumé</a>.
+                            <br> I keep them updated in my
+                            <a href="https://drive.google.com/open?id=0B1OJmxgZ556MNi1rWXhSRWZERkE" target="_blank"
+                                class="link-r">Résumé</a>.
                         </p>
                     </div>
                     <div class="col-3" data-aos="zoom-in">
@@ -205,13 +203,12 @@
                     </div>
                     <div class="col-9" data-aos="fade-right">
                         <p>
-                            I'm learning new technologies everyday and I try to create new possibilities with them every now and then. They can be viewed
-                            at
-                            <a href="http://apps.dhruvikneharia.in" class="link-r" target="_blank">apps.dhruvikneharia.in</a>.
+                            I'm learning new technologies everyday and I try to create new products with them every now
+                            and then.
                             <br>
-                            <br> Their source code is available at
-                            <i class="fa fa-github"></i>
-                            <a href="https://github.com/dhruvikn" target="_blank" class="link-r">Github</a>.
+                            <br> Some of my OpenSource Projects can be viewed on
+                            <a href="https://github.com/dhruvikn" target="_blank" class="link-r"><i class="fab fa-github fa-fw"
+                                    style="color: #EE2E31"></i> GitHub</a>.
                         </p>
                     </div>
                     <div class="col-3" data-aos="zoom-in">
@@ -235,32 +232,26 @@
                         <p>
                             I'm intrested in freelance projects, remote work or just a nice conversation.
                             <br>
-                            <br> Feel free to ping me.
+                            <br> Feel free to connect with me on any of the social platforms below.
                             <br>
                             <br>
-                            <i class="fa fa-envelope-o"></i>&ensp;
+                            <i class="fas fa-at fa-fw"></i>&ensp;
                             <span itemprop="email">
-                                <a href="mailto:dhruvikn@gmail.com" class="link-r">dhruvikn@gmail.com</a>
+                                <a href="mailto:dhruvikn@gmail.com" class="link-r" target="_blank">dhruvikn@gmail.com</a>
                             </span>
                             <br>
-                            <i class="fa fa-phone"></i>&ensp;
-                            <span itemprop="telephone">
-                                <a href="tel:+918952056393" class="link-r">+91 89520 56393</a>
-                            </span>
+                            <i class="fab fa-linkedin-in fa-fw"></i>&ensp;
+                            <a href="https://www.linkedin.com/in/dhruvikn/" class="link-r" target="_blank">dhruvikn</a>
                             <br>
-                            <i class="fa fa-facebook-square"></i>&ensp;
-                            <a href="https://www.facebook.com/dhruvikn" class="link-r">dhruvikn</a>
+                            <i class="fab fa-facebook-f fa-fw"></i>&ensp;
+                            <a href="https://www.facebook.com/dhruvikn" class="link-r" target="_blank">dhruvikn</a>
                             <br>
-                            <i class="fa fa-instagram"></i>&ensp;
-                            <a href="https://www.instagram.com/dhruvikn" class="link-r">dhruvikn</a>
+                            <i class="fab fa-instagram fa-fw"></i>&ensp;
+                            <a href="https://www.instagram.com/dhruvikn" class="link-r" target="_blank">dhruvikn</a>
                             <br>
-                            <i class="fa fa-github-square"></i>&ensp;
-                            <a href="https://www.github.com/dhruvikn" class="link-r">dhruvikn</a>
+                            <i class="fab fa-github fa-fw"></i>&ensp;
+                            <a href="https://www.github.com/dhruvikn" class="link-r" target="_blank">dhruvikn</a>
                             <br>
-                            <br> And if you're in
-                            <a href="https://goo.gl/maps/VZj8Fbt3etS2" target="_blank" itemprop="address"
-                                itemscope itemtype="http://schema.org/PostalAddress" class="link-r">Udaipur</a>,
-                            <i class="fa fa-coffee"></i>'s on me.
                         </p>
                     </div>
                     <div class="col-3" data-aos="zoom-in">
@@ -275,7 +266,7 @@
         <div class="col-12">
             <div class="row">
                 <div class="col-3">
-                    <i class="fa fa-copyright"></i> 2017 - Dhruvik Neharia
+                    Handcrafted with <i class="fas fa-heart"></i>
                 </div>
                 <div class="col-9 right-footer right">
                     Built using
@@ -299,7 +290,7 @@
         <div class="desktop-nav">
             <ul>
                 <a href="#top">
-                    <li class="strong">Dhruvik Neharia</li>
+                    <li class="strong">DHRUVIK NEHARIA</li>
                 </a>
                 <a href="#profile" class="link">
                     <li>Profile</li>
@@ -343,7 +334,6 @@
     <!-- Scripts
     -->
     <script>
-        // Custom jQuery
         $(document).ready(function () {
             // Toggles the menu
             $(".menu-icon").click(function () {
