--- a/404.html
+++ b/404.html
@@ -119,7 +119,7 @@
         <h2>The page you are looking for doesn't exist.</h2>
         Click <a href="./index" class="link">here</a> to go to the homepage or watch live puppies instead.<br><br>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/BH5FnM_dVvE?autoplay=0" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/RTfKYDIhlVE" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 </div>
