Add optimize tag

--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-98255924-2"></script>
     <script>
@@ -11,9 +12,11 @@
         }
         gtag('js', new Date());
 
-        gtag('config', 'UA-98255924-2');
+        gtag('config', 'UA-98255924-2', {
+            'optimize_id': 'GTM-TFH8W8T'
+        });
     </script>
-    
+
     <title>404 - Dhruvik Neharia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Fauna+One|Roboto+Slab|Roboto:100,400" rel="stylesheet">
