--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         }
         gtag('js', new Date());
 
-        gtag('config', 'UA-98255924-2');
+        gtag('config', 'UA-98255924-2', {
+            'optimize_id': 'GTM-TFH8W8T'
+        });
     </script>
     <!-- Google Tag Manager -->
     <script>
