--- a/404.html
+++ b/404.html
@@ -1,7 +1,6 @@
 <html>
 
 <head>
-
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-98255924-2"></script>
     <script>
@@ -130,15 +129,34 @@
         }
     </style>
 </head>
-<div class="middle">
-    <div>
-        <img src="./images/404.svg" style="width: 30%;">
-        <h2>The page you are looking for doesn't exist.</h2>
-        Click <a href="./index" class="link">here</a> to go to the homepage or watch live puppies instead.<br><br>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/RTfKYDIhlVE" frameborder="0" allowfullscreen></iframe>
+
+<body>
+    <div class="middle">
+        <div>
+            <img src="./images/404.svg" style="width: 30%;">
+            <h2>The page you are looking for doesn't exist.</h2>
+            Click <a href="./index" class="link">here</a> to go to the homepage or watch live puppies instead.<br><br>
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/RTfKYDIhlVE" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
     </div>
-</div>
+
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {},
+            Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"),
+                s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5c874c0d101df77a8be21a4a/default';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
+</body>
 
 </html>
