Add user id gtag

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             dataLayer.push(arguments);
         }
         gtag('js', new Date());
+        gtag('set', {'user_id': 'USER_ID'});
 
         gtag('config', 'UA-98255924-2', {
             'optimize_id': 'GTM-TFH8W8T'
