Change color scheme

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <!-- Favicon and chrome theme color
     -->
-    <meta name="theme-color" content="#EE2E31">
+    <meta name="theme-color" content="#bc814f">
     <link rel="icon" href="images/icon.png?v=6">
 
     <!-- Font Awesome
@@ -212,7 +212,7 @@
                             <br>
                             <br> Some of my OpenSource Projects can be viewed on
                             <a href="https://github.com/dhruvikn" target="_blank" class="link-r"><i class="fab fa-github fa-fw"
-                                    style="color: #EE2E31"></i> GitHub</a>.
+                                    style="color: #bc814f"></i> GitHub</a>.
                         </p>
                     </div>
                     <div class="col-3" data-aos="zoom-in">
@@ -294,7 +294,7 @@
         <div class="desktop-nav">
             <ul>
                 <a href="#top">
-                    <li class="strong">DHRUVIK NEHARIA</li>
+                    <li class="strong dn-nav">Dhruvik Neharia</li>
                 </a>
                 <a href="#profile" class="link">
                     <li>Profile</li>
