--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
     <title>404 - Dhruvik Neharia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Fauna+One|Roboto+Slab|Roboto:100,400" rel="stylesheet">
-    <meta name="theme-color" content="#EE2E31">
+    <meta name="theme-color" content="#bc814f">
     <link rel="icon" href="images/icon.png?v=6">
 
     <style>
@@ -38,7 +38,7 @@
 
         h1 {
             font-size: 4em;
-            color: #EE2E31;
+            color: #bc814f;
             font-family: 'Roboto Slab', serif;
         }
 
@@ -77,7 +77,7 @@
         }
 
         a {
-            color: #EE2E31;
+            color: #bc814f;
             text-decoration: none;
         }
 
@@ -93,7 +93,7 @@
             display: block;
             margin-top: -2px;
             right: 0;
-            background: #EE2E31;
+            background: #bc814f;
             transition: width .5s ease;
             -webkit-transition: width .5s ease;
         }
@@ -101,11 +101,11 @@
         .link:hover:after {
             width: 100%;
             left: 0;
-            background: #EE2E31;
+            background: #bc814f;
         }
 
         ::selection {
-            background-color: #EE2E31;
+            background-color: #bc814f;
         }
 
         ::-webkit-scrollbar {
@@ -114,19 +114,19 @@
 
         ::-webkit-scrollbar-track {
             -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-            background: #EE2E31;
+            background: #bc814f;
         }
 
         ::-webkit-scrollbar-thumb {
-            background: #EE2E31;
+            background: #bc814f;
         }
 
         ::-webkit-scrollbar-thumb:hover {
-            background: #EE2E31;
+            background: #bc814f;
         }
 
         ::-webkit-scrollbar-thumb:window-inactive {
-            background: #EE2E31;
+            background: #bc814f;
         }
     </style>
 </head>
