--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             dataLayer.push(arguments);
         }
         gtag('js', new Date());
-        gtag('set', {'user_id': 'USER_ID'});
+        gtag('set', {
+            'user_id': 'USER_ID'
+        });
 
         gtag('config', 'UA-98255924-2', {
             'optimize_id': 'GTM-TFH8W8T'
@@ -57,8 +59,10 @@
 
     <!-- SEO
     -->
-    <meta name="Description" content="Portfolio of Dhruvik Neharia. I'm a student and developer based in Udaipur, Rajasthan.">
-    <meta name="Keywords" content="Dhruvik, Neharia, Dhruvik Neharia, dhruvik neharia, dhruvikn, dhruvikneharia, dhruvik, neharia, dhruvik neharia udaipur, DhruvikN, portfolio, Portfolio, student, Student, website, Website, web-develop, web-development, front-end, HTML, CSS, Udaipur, Rajasthan, Techno India NJR, Engineer, Technology, website, github, apps, software, front, end, javascript, jquery, simplegrid, animations, scroll, git, github, bitbucket, Git, GitHub, india, bachelor of technology, b.tech">
+    <meta name="Description"
+        content="Portfolio of Dhruvik Neharia. I'm a student and developer based in Udaipur, Rajasthan.">
+    <meta name="Keywords"
+        content="Dhruvik, Neharia, Dhruvik Neharia, dhruvik neharia, dhruvikn, dhruvikneharia, dhruvik, neharia, dhruvik neharia udaipur, DhruvikN, portfolio, Portfolio, student, Student, website, Website, web-develop, web-development, front-end, HTML, CSS, Udaipur, Rajasthan, Techno India NJR, Engineer, Technology, website, github, apps, software, front, end, javascript, jquery, simplegrid, animations, scroll, git, github, bitbucket, Git, GitHub, india, bachelor of technology, b.tech">
     <meta name="author" content="Dhruvik Neharia">
     <script type="application/ld+json">
         {
@@ -91,8 +95,8 @@
     <!-- Font Awesome
     -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
     <!-- jQuery
     -->
@@ -101,10 +105,6 @@
     <!-- Simple Grid
     -->
     <link rel="stylesheet" href="css/simple-grid.min.css">
-
-    <!-- Fonts
-    -->
-    <link href="https://fonts.googleapis.com/css?family=Fauna+One|Roboto+Slab" rel="stylesheet">
 
     <!-- AOS
     -->
@@ -118,7 +118,8 @@
 
 <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MPT7B8L" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MPT7B8L" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
     <span id="top"></span>
@@ -148,9 +149,9 @@
             <div class="row">
                 <h2 data-aos="fade-right" class="col-12">Profile</h2>
                 <div class="row">
-                    <span class="col-3 rh">
+                    <!-- <span class="col-3 rh">
                         <img src="./images/avatar.jpg" data-aos="zoom-in" class="iconh avatar">
-                    </span>
+                    </span> -->
                     <div class="col-9" data-aos="fade-right">
                         <p>
                             I'm a developer &amp; designer based in
@@ -162,9 +163,9 @@
                             I like coding my own designs. I'm learning Full Stack Development right now.
                         </p>
                     </div>
-                    <span class="col-3">
+                    <!-- <span class="col-3">
                         <img src="./images/avatar.jpg" data-aos="zoom-in" class="icon avatar">
-                    </span>
+                    </span> -->
                 </div>
             </div>
         </div>
@@ -210,9 +211,9 @@
                             I'm learning new technologies everyday and I try to create new products with them every now
                             and then.
                             <br>
-                            <br> Some of my OpenSource Projects can be viewed on
-                            <a href="https://github.com/dhruvikn" target="_blank" class="link-r"><i class="fab fa-github fa-fw"
-                                    style="color: #bc814f"></i> GitHub</a>.
+                            <br> Have a look at my <a href="https://dribbble.com/dhruvikn" target="_blank" class="link-r"><i
+                                    class="fab fa-dribbble fa-fw" style="color: #141E30"></i> Dribbble</a> or <a href="https://github.com/dhruvikn" target="_blank" class="link-r"><i
+                                    class="fab fa-github fa-fw" style="color: #141E30"></i> GitHub</a>.
                         </p>
                     </div>
                     <div class="col-3" data-aos="zoom-in">
@@ -241,20 +242,24 @@
                             <br>
                             <i class="fas fa-at fa-fw"></i>&ensp;
                             <span itemprop="email">
-                                <a href="mailto:dhruvikn@gmail.com" class="link-r" target="_blank">dhruvikn@gmail.com</a>
+                                <a href="mailto:dhruvikn@gmail.com" class="link-r"
+                                    target="_blank">dhruvikn@gmail.com</a>
                             </span>
+                            <br>
+                            <i class="fab fa-dribbble fa-fw"></i>&ensp;
+                            <a href="https://www.dribbble.com/dhruvikn/" class="link-r" target="_blank">dhruvikn</a>
                             <br>
                             <i class="fab fa-linkedin-in fa-fw"></i>&ensp;
                             <a href="https://www.linkedin.com/in/dhruvikn/" class="link-r" target="_blank">dhruvikn</a>
+                            <br>
+                            <i class="fab fa-github fa-fw"></i>&ensp;
+                            <a href="https://www.github.com/dhruvikn" class="link-r" target="_blank">dhruvikn</a>
                             <br>
                             <i class="fab fa-facebook-f fa-fw"></i>&ensp;
                             <a href="https://www.facebook.com/dhruvikn" class="link-r" target="_blank">dhruvikn</a>
                             <br>
                             <i class="fab fa-instagram fa-fw"></i>&ensp;
                             <a href="https://www.instagram.com/dhruvikn" class="link-r" target="_blank">dhruvikn</a>
-                            <br>
-                            <i class="fab fa-github fa-fw"></i>&ensp;
-                            <a href="https://www.github.com/dhruvikn" class="link-r" target="_blank">dhruvikn</a>
                             <br>
                         </p>
                     </div>
@@ -418,7 +423,8 @@
                             if ($target.is(":focus")) { // Checking if the target was focused
                                 return false;
                             } else {
-                                $target.attr('tabindex', '-1'); // Adding tabindex for elements not focusable
+                                $target.attr('tabindex',
+                                '-1'); // Adding tabindex for elements not focusable
                                 $target.focus(); // Set focus again
                             };
                         });
