--- a/404.html
+++ b/404.html
@@ -19,15 +19,15 @@
 
     <title>404 - Dhruvik Neharia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Fauna+One|Roboto+Slab|Roboto:100,400" rel="stylesheet">
-    <meta name="theme-color" content="#bc814f">
+    <link href="https://fonts.googleapis.com/css?family=Alice|Playfair+Display:700&display=swap" rel="stylesheet">
+    <meta name="theme-color" content="#141E30">
     <link rel="icon" href="images/icon.png?v=6">
 
     <style>
         body {
-            background: #0b0c10;
-            font-family: 'Fauna One', serif;
-            color: #FAFAFA;
+            background: #e8e8e8;
+            font-family: 'Alice', serif;
+            color: #141E30;
             margin: 5vw 20vw;
             padding: 0;
         }
@@ -38,8 +38,8 @@
 
         h1 {
             font-size: 4em;
-            color: #bc814f;
-            font-family: 'Roboto Slab', serif;
+            color: #141E30;
+            font-family: 'Playfair Display', serif;
         }
 
         .video-container {
@@ -77,7 +77,7 @@
         }
 
         a {
-            color: #bc814f;
+            color: #141E30;
             text-decoration: none;
         }
 
@@ -93,7 +93,7 @@
             display: block;
             margin-top: -2px;
             right: 0;
-            background: #bc814f;
+            background: #141E30;
             transition: width .5s ease;
             -webkit-transition: width .5s ease;
         }
@@ -101,11 +101,11 @@
         .link:hover:after {
             width: 100%;
             left: 0;
-            background: #bc814f;
+            background: #141E30;
         }
 
         ::selection {
-            background-color: #bc814f;
+            background-color: #141E30;
         }
 
         ::-webkit-scrollbar {
@@ -114,19 +114,19 @@
 
         ::-webkit-scrollbar-track {
             -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-            background: #bc814f;
+            background: #141E30;
         }
 
         ::-webkit-scrollbar-thumb {
-            background: #bc814f;
+            background: #141E30;
         }
 
         ::-webkit-scrollbar-thumb:hover {
-            background: #bc814f;
+            background: #141E30;
         }
 
         ::-webkit-scrollbar-thumb:window-inactive {
-            background: #bc814f;
+            background: #141E30;
         }
     </style>
 </head>
